--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <p>.</p>
 
-<img src="1.jpg" width=75% alt="Flowers in Chania">
+<img src="1.jpg" width="600" alt="Flowers in Chania">
 
 <a href="index2.html">click</a>
 
