--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 </head>
 <body>
 
-<h1>THAO</h1>
-
+<h1>Lost words</h1>
 <p>.</p>
 
-<img src="1.jpg" width="600" alt="Flowers in Chania">
+<img src="1.jpg" width=75% alt="Flowers in Chania">
 
 <a href="index2.html">click</a>
 
