--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Thao</title>
+<title>Page Lost words</title>
 </head>
 <body>
 
-<h1>Lost words</h1>
+<h1></h1>
 <p>.</p>
 
 <img src="1.jpg" width=75% alt="Flowers in Chania">
