--- a/index3.html
+++ b/index3.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Thao</title>
+<title>Page The horizon waits</title>
 </head>
 <body>
 
-<h1>The horizon waits</h1>
-<p>.</p>
+
+
 
 <img src="3.jpg" width=75% alt="Flowers in Chania">
 
