--- a/index3.html
+++ b/index3.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page The horizon waits</title>
+<title>Page The horizon waits </title>
 </head>
+
 <body>
 
+
+<h1>The horizon waits</h1>
+<p>.</p>
 
 
 
