--- a/index4.html
+++ b/index4.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page The curtain shall fall</title>
+<title>The curtain shall fall</title>
 </head>
+
 <body>
 
-<h1>THAO</h1>
+<h1>The curtain shall fall</h1>
 <p>.</p>
 
 <img src="4.jpg" width=75% alt="Flowers in Chania">
