--- a/index7.html
+++ b/index7.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>THAO</h1>
+<h1>For your fear only the bare light</h1>
 <p>.</p>
 
 <img src="7.jpg" width=75% alt="Flowers in Chania">
