--- a/index9.html
+++ b/index9.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>THAO</h1>
+<h1>Do not let upon the devil in</h1>
 <p>.</p>
 
 <img src="9.jpg" width=75% alt="Flowers in Chania">
