--- a/index2.html
+++ b/index2.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 
-<h1>Page Past cease to exist</h1>
+<h1>Past cease to exist</h1>
 <p></p>
 
-<img src="2.jpg" width=75% alt="Flowers in Chania">
+<img src="2.jpg" width="600" alt="Flowers in Chania">
 
 <a href="index3.html">click</a>
 
