--- a/index6.html
+++ b/index6.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Page And the unknown kiss your skin</h1>
+<h1>And the unknown kiss your skin</h1>
 <p>.</p>
 
 <img src="6.jpg" width=75% alt="Flowers in Chania">
