--- a/index4.html
+++ b/index4.html
@@ -7,9 +7,9 @@
 <body>
 
 <h1>The curtain shall fall</h1>
-<p>.</p>
 
-<img src="4.jpg" width=75% alt="Flowers in Chania">
+
+<img src="4.jpg" width="600"  alt="Flowers in Chania">
 
 <a href="index5.html">click</a>
 
