--- a/index6.html
+++ b/index6.html
@@ -6,9 +6,9 @@
 <body>
 
 <h1>And the unknown kiss your skin</h1>
-<p>.</p>
 
-<img src="6.jpg" width=75% alt="Flowers in Chania">
+
+<img src="6.jpg" width="600"  alt="Flowers in Chania">
 
 <a href="index7.html">click</a>
 
