--- a/index8.html
+++ b/index8.html
@@ -6,9 +6,9 @@
 <body>
 
 <h1>And as the sun comes</h1>
-<p>.</p>
 
-<img src="8.jpg" width=50% alt="Flowers in Chania">
+
+<img src="8.jpg" width="600"  alt="Flowers in Chania">
 
 <a href="index9.html">click</a>
 
