--- a/index9.html
+++ b/index9.html
@@ -6,9 +6,9 @@
 <body>
 
 <h1>Do not let upon the devil in</h1>
-<p>.</p>
 
-<img src="9.jpg" width=75% alt="Flowers in Chania">
+
+<img src="9.jpg" width="600"  alt="Flowers in Chania">
 
 
 <a href="index10.html">click</a>
