--- a/Net Art/index3.html
+++ b/Net Art/index3.html
@@ -11,9 +11,9 @@
 
 
 
-<img src="3.jpg" width=75% alt="Flowers in Chania">
+<img src="../3.jpg" width=75% alt="Flowers in Chania">
 
-<a href="index4.html">click</a>
+<a href="../index4.html">click</a>
 
 </body>
 </html>
