--- a/Net Art/index7.html
+++ b/Net Art/index7.html
@@ -8,9 +8,9 @@
 <h1>For your fear only the bare light</h1>
 
 
-<img src="7.jpg" width=75% alt="Flowers in Chania">
+<img src="../7.jpg" width=75% alt="Flowers in Chania">
 
-<a href="index8.html">click</a>
+<a href="../index8.html">click</a>
 
 </body>
 </html>
