--- a/Net Art/index8.html
+++ b/Net Art/index8.html
@@ -8,9 +8,9 @@
 <h1>And as the sun comes</h1>
 
 
-<img src="8.jpg" width="600"  alt="Flowers in Chania">
+<img src="../8.jpg" width="600"  alt="Flowers in Chania">
 
-<a href="index9.html">click</a>
+<a href="../index9.html">click</a>
 
 </body>
 </html>
