--- a/Net Art/index9.html
+++ b/Net Art/index9.html
@@ -8,7 +8,7 @@
 <h1>Do not let upon the devil in</h1>
 
 
-<img src="9.jpg" width="600"  alt="Flowers in Chania">
+<img src="../9.jpg" width="600"  alt="Flowers in Chania">
 
 
 <a href="index10.html">click</a>
