--- a/Net Art/index.html
+++ b/Net Art/index.html
@@ -8,9 +8,9 @@
 
 <h1>Lost words</h1>
 
-<img src="1.jpg" width="600" alt="Flowers in Chania">
+<img src="../1.jpg" width="600" alt="Flowers in Chania">
 
-<a href="index2.html">click</a>
+<a href="../index2.html">click</a>
 
 
 </body>
