--- a/Net Art/index10.html
+++ b/Net Art/index10.html
@@ -8,7 +8,7 @@
 <h1>THAO</h1>
 <p>.</p>
 
-<img src="10.jpg" width=75% alt="Flowers in Chania">
+<img src="../10.jpg" width=75% alt="Flowers in Chania">
 
 
 
