--- a/Net Art/index2.html
+++ b/Net Art/index2.html
@@ -8,9 +8,9 @@
 <h1>Past cease to exist</h1>
 
 
-<img src="2.jpg" width="600" alt="Flowers in Chania">
+<img src="../2.jpg" width="600" alt="Flowers in Chania">
 
-<a href="index3.html">click</a>
+<a href="../index3.html">click</a>
 
 </body>
 </html>
