--- a/Net Art/index4.html
+++ b/Net Art/index4.html
@@ -9,9 +9,9 @@
 <h1>The curtain shall fall</h1>
 
 
-<img src="4.jpg" width="600"  alt="Flowers in Chania">
+<img src="../4.jpg" width="600"  alt="Flowers in Chania">
 
-<a href="index5.html">click</a>
+<a href="../index5.html">click</a>
 
 </body>
 </html>
