--- a/Net Art/index5.html
+++ b/Net Art/index5.html
@@ -8,9 +8,9 @@
 <h1>Let the darkness turn to trees</h1>
 <p>.</p>
 
-<img src="5.jpg" width=75% alt="Flowers in Chania">
+<img src="../5.jpg" width=75% alt="Flowers in Chania">
 
-<a href="index6.html">click</a>
+<a href="../index6.html">click</a>
 
 </body>
 </html>
