--- a/Net Art/index6.html
+++ b/Net Art/index6.html
@@ -8,9 +8,9 @@
 <h1>And the unknown kiss your skin</h1>
 
 
-<img src="6.jpg" width="600"  alt="Flowers in Chania">
+<img src="../6.jpg" width="600"  alt="Flowers in Chania">
 
-<a href="index7.html">click</a>
+<a href="../index7.html">click</a>
 
 </body>
 </html>
