--- a/Page2.html
+++ b/Page2.html
@@ -19,7 +19,7 @@
 <!-- everything on this page is in a fluid container-->
 
 <!-- this is where your page code starts -->
-<h1 class="text-center"> Nancy Nguyen</h1>
+<h1 class="text-center"> Nancy Nguyen's Final Portfolio</h1>
 <!-- I first tried putting this in a jumbotron, but did not like it-->
 
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
@@ -27,25 +27,38 @@
 <ul class="navbar-nav">
 
 <li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page1.html">Meme Mashup</a>
+<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page1.html">Glitch Series</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page2.html">Minecraft Sculpture</a>
+<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page2.html">Concept and Process</a>
 </li>
-<li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page3.html">3D Print</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page4.html">Net Art</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page5.html">Glitch Images</a>
-</li>
+<li class="nav-item"> </li>
+<li class="nav-item"> </li>
+<li class="nav-item"> </li>
 </ul>
-</nav> <img src="file:///Macintosh HD/Users/Nancy/Documents/images/minecraft sculpture.jpg" width="400px">
-
-
-
+</nav>
+<p>Conceptual Basis</p>
+<p>The conceptual idea behind my glitch series is using my experiences in those photos todemonstrate my connection to its environment. I think there is always a layer of ambiguity that ishard to explain in photos, a layer that speaks upon the emotions and energy that comes from aplace in time and the perception of the person in that place and time. You can see a picture of ascenery, but you can only imagine what the person who is taking the picture may feel about itand I want to dive into that realm. The realm that is hard to speak about. The environment isphysical, people may just see nothing than the physical nature of things, and I want to try toextend a pretty picture into other dialogues, or references. There is a metaphysical aspect to myimages. Maybe instead of metaphysical, I can say other frequencies, a frequency that exist but isinvisible to the human eye. It’s kind of like how other color waves in the light spectrum may beinvisible to the human eye, we know its there but we can’t see it. So I want to bring that into thespace in my photos, the experience of the person in the environment.</p>
+<p>Technical Process</p>
+<p> The process of creating my series began with collecting photos I found important, or<br>
+  memorable, or even vague in my memory. I chose a total of eight photos. The pictures are from<br>
+  places I’ve traveled to over the years. The first one is Berlin, Germany, there I visited the<br>
+  memorial for the murdered Jews. I use Photo Mosh and tested all their controls to see which<br>
+  control had the best effect of the subjects in the photo, that resonated with my experience. Using<br>
+  the Jitter control, I was able to create an interesting shot of my images, as I navigated the speed<br>
+  and amount of the Jitter control. I like how it gave the image a digital, matrix like aspect.. I used<br>
+  the same control for the second city picture in Halmstad, Sweden. I visited both those places in<br>
+  the same time frame. In the third picture I use scanlines to show how I wasn’t really connected to<br>
+  the nature environment of Sweden because I was too busy trying to take pictures. The texture in<br>
+  the photo reminds me of my camera screen trying to focus on the image. For my fourth, fifth,<br>
+  and sixth image, I used the melting control. The pictures were part of my experience going to<br>
+  meditation retreats in Ukiah, and Oregon. In each picture I mess with the amount, scale, and<br>
+  speed of the melting motion, the motion representing my mental stability in these photos. As you<br>
+  can see the ones with less dramatic motions demonstrate more pleasant times. My seventh<br>
+  picture took place in Vietnam, and I used the slice control and manipulated the count, offset, and<br>
+  vertical speed to give me interesting textures. Finally the eighth picture was in Switzerland and I<br>
+  use polar pixelate control where I could change the radius and the amount of pixelation of my<br>
+  image to give my image a dream-like imagery.</p>
 </div>
 
 </body>
