--- a/Page4.html
+++ b/Page4.html
@@ -41,9 +41,7 @@
 <li class="nav-item">
 <a class="nav-link" href="Page4.html">Net Art</a>
 </li>
-<li class="nav-item">
-<a class="nav-link" href="Page5.html">Glitch Images</a>
-</li>
+<li class="nav-item"> <a class="nav-link" href="Page5.html">Final Project</a> </li>
 </ul>
 </nav> <img src="images/10 copy.png">
 	
