--- a/Page5.html
+++ b/Page5.html
@@ -39,7 +39,7 @@
 <a class="nav-link" href="Page4.html">Net Art</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="Page5.html">Glitch Images</a>
+<a class="nav-link" href="Page5.html">Final Project</a>
 </li>
 </ul>
 </nav> <img src="images/Glitch1.jpg" width="900px">
