--- a/Page1.html
+++ b/Page1.html
@@ -19,31 +19,34 @@
 <!-- everything on this page is in a fluid container-->
 
 <!-- this is where your page code starts -->
-<h1 class="text-center">Nancy Nguyen's Portfolio</h1>
+<h1 class="text-center">Nancy Nguyen's Final Portfolio</h1>
 <!-- I first tried putting this in a jumbotron, but did not like it-->
 
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
 <!-- the navbar is a list of links and is styled above, you can add your own styles too-->
 <ul class="navbar-nav">
 <li class="nav-item"> </li>
-<li class="nav-item">
-<a class="nav-link" href="Page1.html">Meme Mashup</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="Page2.html">Minecraft Sculpture</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="Page3.html">3D Print</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="Page4.html">Net Art</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="Page5.html">Glitch Images</a>
-</li>
+<li class="nav-item"> <a class="nav-link" href="Page1.html">Glitch Series</a> </li>
+<li class="nav-item"> <a class="nav-link" href="Page2.html">Concept and Process</a> </li>
+<li class="nav-item"> </li>
+<li class="nav-item"> </li>
+
 </ul>
-</nav> <img src="images/Meme mashup.jpg">
-	
+</nav> <img src="glitchseries1.jpg">
+	<p></p>
+	<img src="glitchseries2.jpg" width="800">
+	<p></p>
+	<img src="glitchseries3.jpg" width="800">
+	<p></p>
+	<img src="glitchseries4.jpg" width="800">
+	<p></p>
+	<img src="glitchseries5.jpg" width="800">
+	<p></p>
+	<img src="glitchseries6.jpg" width="800">
+	<p></p>
+	<img src="glitchseries7.jpg" width="800">
+	<p></p>
+  <img src="glitchseries8.jpg" width="800">
 
 
 
