--- a/Page3.html
+++ b/Page3.html
@@ -27,23 +27,21 @@
 <ul class="navbar-nav">
 <li class="nav-item">
 	
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/index.html">Home</a>
+<a class="nav-link" href="Index.html">Home</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page1.html">Meme Mashup</a>
+<a class="nav-link" href="Page1.html">Meme Mashup</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page2.html">Minecraft Sculpture</a>
+<a class="nav-link" href="Page2.html">Minecraft Sculpture</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page3.html">3D Print</a>
+<a class="nav-link" href="Page3.html">3D Print</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page4.html">Net Art</a>
+<a class="nav-link" href="Page4.html">Net Art</a>
 </li>
-<li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page5.html">Glitch Images</a>
-</li>
+<li class="nav-item"> <a class="nav-link" href="Page5.html">Final Project</a> </li>
 </ul>
 </nav> <img src="file:///Macintosh HD/Users/Nancy/Documents/images/3-D Object.jpg">
 	
