--- a/index.html
+++ b/index.html
@@ -19,35 +19,28 @@
 <!-- everything on this page is in a fluid container-->
 
 <!-- this is where your page code starts -->
-<h1 class="text-center">Nancy Nguyen's Portfolio </h1>
+<h1 class="text-center">Nancy Nguyen's Final Portfolio </h1>
 <!-- I first tried putting this in a jumbotron, but did not like it-->
 
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
 <!-- the navbar is a list of links and is styled above, you can add your own styles too-->
 <ul class="navbar-nav">
+<li class="nav-item"> </li>
 <li class="nav-item">
-	
-<a class="nav-link" href="Index.html">Home</a>
+<a class="nav-link" href="Page1.html">Glitch Series</a>
 </li>
+<li class="nav-item"> </li>
 <li class="nav-item">
-<a class="nav-link" href="Page1.html">Meme Mashup</a>
+<a class="nav-link" href="Page3.html">Concept and Process</a>
 </li>
-<li class="nav-item">
-<a class="nav-link" href="Page2.html">Minecraft Sculpture</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="Page3.html">3D Print</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="Page4.html">Net Art</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="Page5.html">Glitch Images</a>
-</li>
+<li class="nav-item"> </li>
+<li class="nav-item"> </li>
 </ul>
 </nav>
 
- <img src="images/Art.jpg" width="600px" alt="art">
+	<p>
+	  Artist Statement:&nbsp;Throughout my work, I navigate the ideas of space, how we perceive and move aroundspace. Using photos from my travels, I apply different methods of glitching to demonstrate theatmosphere of my relationship to the environment. My subjects involve the natural world andarchitectural structures. My vision derives from my self reflective studies through writing poems,sitting meditation and Buddhist studies. There is a dialogue between the inner and outer spacewithin my work. The inner space narrates my awareness and perception. The outer space is thephysical environment. My self reflective studies derive from ancient technology, prayer andsitting meditation, and also studying the Avatamsaka Sutra in my adolescent years at theBerkeley Buddhist Monastery. In my glitch series, I’ve created an individual style to each of myphotos. I use certain methods to evoke a sense of movement, emotions, and a play on visualperception. I want to be able to show our relationship to the space around us. My obsession withbreaking down the physical perception of our infrastructure and the idea of what is going on aswe are interacting with the space around us is constantly trying to find its voice in my work.
+    </center></p><p><img src="images/Art.jpg" width="600px" alt="art"></p>
 	
 
   
