--- a/Page1.html
+++ b/Page1.html
@@ -34,19 +34,19 @@
 </ul>
 </nav> <img src="images/glitchseries1.jpg">
 	<p></p>
-	<img src="images/glitchseries2.jpg" width="800"/>
+	<img src="/images/glitchseries2.jpg" width="800"/>
 	<p></p>
-	<img src="images/glitchseries3.jpg" width="800"/>
+	<img src="/images/glitchseries3.jpg" width="800"/>
 	<p></p>
-	<img src="images/glitchseries4.jpg" width="800"/>
+	<img src="/images/glitchseries4.jpg" width="800"/>
 	<p></p>
-	<img src="images/glitchseries5.jpg" width="800"/>
+	<img src="/images/glitchseries5.jpg" width="800"/>
 	<p></p>
-	<img src="images/glitchseries6.jpg" width="800"/>
+	<img src="/images/glitchseries6.jpg" width="800"/>
 	<p></p>
-	<img src="images/glitchseries7.jpg" width="800"/>
+	<img src="/images/glitchseries7.jpg" width="800"/>
 	<p></p>
-  <img src="images/glitchseries8.jpg" width="800"/>
+  <img src="/images/glitchseries8.jpg" width="800"/>
 
 
 
