--- a/images/Page1.html
+++ b/images/Page1.html
@@ -32,21 +32,21 @@
 <li class="nav-item"> </li>
 
 </ul>
-</nav> <img src="images/glitchseries1.jpg">
+</nav> <img src="images/glitchseries1.jpg" height="800" width="800"/>
 	<p></p>
-	<img src="/images/glitchseries2.jpg" width="800"/>
+	<img src="/images/glitchseries2.jpg" height="800" width="800"/>
 	<p></p>
-	<img src="/images/glitchseries3.jpg" width="800"/>
+	<img src="/images/glitchseries3.jpg" height="800" width="800"/>
 	<p></p>
-	<img src="/images/glitchseries4.jpg" width="800"/>
+	<img src="/images/glitchseries4.jpg" height="800" width="800"/>
 	<p></p>
-	<img src="/images/glitchseries5.jpg" width="800"/>
+	<img src="/images/glitchseries5.jpg" height="800" width="800"/>
 	<p></p>
-	<img src="/images/glitchseries6.jpg" width="800"/>
+	<img src="/images/glitchseries6.jpg" height="800" width="800"/>
 	<p></p>
-	<img src="/images/glitchseries7.jpg" width="800"/>
+	<img src="/images/glitchseries7.jpg" height="800" width="800"/>
 	<p></p>
-  <img src="/images/glitchseries8.jpg" width="800"/>
+  <img src="/images/glitchseries8.jpg" height="800" width="800"/>
 
 
 
