--- a/Page2.html
+++ b/Page2.html
@@ -27,12 +27,12 @@
 <ul class="navbar-nav">
 
 <li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page1.html">Glitch Series</a>
+<a class="nav-link" href="page1.html">Glitch Series</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="file:///Macintosh HD/Users/Nancy/Documents/page2.html">Concept and Process</a>
+<a class="nav-link" href="page2.html">Concept and Process</a>
 </li>
-<li class="nav-item"> </li>
+
 <li class="nav-item"> </li>
 <li class="nav-item"> </li>
 </ul>
